# andy

./: .gitmodules  CMakeLists.txt  README.md  uva.cmake
cmake/: andy.cmake  andyConfig.cmake.in
include/: andy.hpp  format.hpp  uva.hpp
include/andy/xml/: CMakeLists.txt
include/andy/xml/andy/: xml.hpp
include/andy/xml/src/: schema.cpp  xml.cpp
include/andy/xml/uva-tests/uva-xml/: xml_spec.cpp
include/drawing/: CMakeLists.txt  colormap.hpp  drawing.hpp  palette.hpp
include/drawing/src/: colormap.cpp  palette.cpp
include/job/include/: job.hpp
include/job/job/include/controllers/: application_controller.hpp
include/job/job/src/controllers/: application_controller.cpp
include/job/src/: job.cpp
include/uva/: format.hpp
include/uva-widgets/: CMakeLists.txt
include/uva-widgets/include/uva/: widgets.hpp
include/uva/xml/: CMakeLists.txt
include/uva/xml/src/: schema.cpp  xml.cpp
include/uva/xml/uva/: xml.hpp
include/xml/: CMakeLists.txt
include/xml/src/: schema.cpp  xml.cpp
include/xml/uva/: xml.hpp
src/: andy_pkgr.cpp  andy_pm.cpp
uva/: CMakeLists.txt
uva/config/: routes.cpp
uva/include/controllers/: application_controller.hpp
uva/src/controllers/: application_controller.cpp
